tests/parent_use.err
Parse Error in line 4, column 21 of "parent_use.af"
|   use "child_use1.af",
|                       ^
Error: Redefinition of label 'redef' in map

Parse Error in line 8, column 8 of "parent_use.af"
|   [1, use + 3, "h"] = ``
|          ^
Error: 'use' keyword cannot be used as a variable

2 Parse Errors encountered


